--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,6 @@ RUN npm run build
 
 FROM node:18-alpine
 WORKDIR /app
-RUN npm install -g serve
 COPY --from=builder /app/dist ./dist
 EXPOSE 5173
-CMD ["serve", "-s", "dist", "-l", "5173"]
+CMD ["npx", "vite", "preview", "--host", "0.0.0.0", "--port", "5173"]
